--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <body>
 
   <div class="header">
-    <h1><a href="https://codepen.io/ztdorttb/pen/abmOLzo">logo</a></h1>
+    <h1><a href="index.html">logo</a></h1>
     <ul>
-      <li><a href="https://codepen.io/ztdorttb/pen/oNzBXaM?editors=1100">系列鏡框</a></li>
+      <li><a href="series.html">系列鏡框</a></li>
       <li><a href="#">門市據點</a></li>
       <li><a href="#">部落格</a></li>
       <li><a href="#">常見問題</a></li>
